Feat: Add delete routes and cascading for all models
