# routes/accountRoutes.ts
@@ -9,5 +9,7 @@ router.post('/:id/deposit', accountController.deposit);
 router.post('/:id/withdraw', accountController.withdraw);
 router.post('/:id/transfer', accountController.transfer);
 router.get('/:id/transactions', accountController.getTransactions);
+router.delete('/:id', accountController.deleteAccount);
+router.delete('/:id/transactions/:txnId', accountController.deleteTransaction);
 
 export default router;
