# routes/userRoutes.ts
@@ -6,5 +6,6 @@ const router = Router();
 router.post('/', userController.createUser);
 router.get('/', userController.getUsers);
 router.get('/:id', userController.getUser);
+router.delete('/:id', userController.deleteUser);
 
 export default router;
